--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
+.matchdetalj {
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    max-width: auto;
+    display: grid;
+}
+
+.matchdetalj .logo {
+    max-width: 10%;
+    height: 100%;
+    border-radius: auto;
+    align-items: center;
+    
+}
