--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,17 +2,17 @@
 .matchdetalj {
     border: 1px solid;
     border-radius: 10px;
-    padding: 20px;
-    margin: 10px;
+    padding: 10px;
+    margin: 50px;
     text-align: center;
     max-width: auto;
     display: grid;
 }
 
 .matchdetalj .logo {
-    max-width: 10%;
-    height: 100%;
-    border-radius: auto;
+    max-width: 20%;
+    height: 80%;
+    border-radius: 10px;
     align-items: center;
     
 }
