--- a/frontend/src/components/MatchDetails/MatchDetail.css
+++ b/frontend/src/components/MatchDetails/MatchDetail.css
@@ -1,19 +1,11 @@
 .matchdetails {
-    border: 1px solid hsl(0, 0%, 0%);
-    border-radius: 10px;
-    box-shadow: 5px 5px 15px hsl(0, 0%, 80%);
-    margin: 5px;
-    padding: 10px;
     width: 50%;
-    height: 100%;
-    font-family: "Roboto", sans-serif;
-}
-
-.match-card {
+    box-sizing: border-box;
+    margin: 10px 0 10px 50%;
     border: 1px solid hsl(0, 0%, 0%);
     border-radius: 10px;
-    box-shadow: 5px 5px 15px hsl(0, 0%, 80%);
-    margin: 1px;
+    box-shadow: 2px 2px 15px hsl(0, 0%, 20%);
+    padding: 20px;
     font-family: "Roboto", sans-serif;
 }
 
@@ -33,7 +25,6 @@
     font-family: "Roboto", sans-serif;
 }
 
-
 .score {
     display: flex;
     gap: 10%;
@@ -52,9 +43,11 @@
 .tabs {
     display: flex;
     gap: 10%;
+    box-shadow: 2px 2px 10px hsl(0, 0%, 20%);
     justify-content: space-evenly;
     border: 1px solid hsl(0, 0%, 0%);
     border-radius: 5px;
+    
     font-family: "Roboto", sans-serif;
 }
 
