--- a/frontend/src/components/MatchDetails/MatchDetail.css
+++ b/frontend/src/components/MatchDetails/MatchDetail.css
@@ -1,5 +1,15 @@
+.page {
+    display: flex;
+    gap: 20px;
+    padding: 20px;
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+}
+
 .matchdetails {
-    width: 50%;
+    position: absolute;
+    right: clamp(1px, 5%, 30px);
+    width: clamp(450px, 50%, 900px);
     box-sizing: border-box;
     margin: 10px 0 10px 50%;
     border: 1px solid hsl(0, 0%, 0%);
@@ -8,6 +18,16 @@
     padding: 20px;
     font-family: "Roboto", sans-serif;
 }
+
+.match-card {
+    height: clamp(100px, 20%, 200px);
+    border: 1px solid hsl(0, 0%, 0%);
+    border-radius: 10px;
+    padding: 10px;
+    
+    font-family: "Roboto", sans-serif;
+}
+
 
 .scoreboard {
     font-size: 24px;
