--- a/frontend/src/components/MatchDetails/MatchDetail.css
+++ b/frontend/src/components/MatchDetails/MatchDetail.css
@@ -2,8 +2,11 @@
 
 .matchdetails {
     position: absolute;
-    background-color: aliceblue;
-    box-shadow: 2px 2px 10px rgba(82, 82, 82, 0.629);
+    
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
+    background: rgba(30, 30, 30, 0.7);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
     right: clamp(1px, 1%, 30px);
     width: clamp(200px, 46%, 1000px);
     margin-top: 20px;
@@ -26,7 +29,9 @@
     height: clamp(300px, 50%, 600px);
     border-radius: 10px;
     box-shadow: 1px 1px 10px rgb(0, 0, 0);
-    background-color: rgba(30, 30, 30, 0.7);
+    background: rgba(30, 30, 30, 0.7);
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
     
     padding: 10px;
 
@@ -69,7 +74,7 @@
     justify-content: space-evenly;
 
     border-radius: 5px;
-    box-shadow: 0.5px 0.5px 0.5px rgb(0, 0, 0);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
     font-family: "Roboto", sans-serif;
 }
 
@@ -82,7 +87,7 @@
 }
 
 .tab-button.active {
-    color: #1976d2 !important;
+    color: #314158 !important;
 }
 
 .tab-button.active::after {
@@ -93,22 +98,22 @@
     transform: translateX(-50%) scale(1);
     width: 60%;
     height: 3px;
-    background-color: #1976d2;
+    background-color: #314158;
     border-radius: 2px;
     transition: transform 0.3s ease, width 0.3s ease;
 }
 
 .tab-button::after {
-    content: "";
+    
     position: absolute;
-     bottom: -3px;
-     left: 50%;
-     transform: translateX(-50%) scaleX(0);
-     width: 60%;
-     height: 3px;
+    bottom: -3px;
+    left: 50%;
+    transform: translateX(-50%) scaleX(0);
+    width: 60%;
+    height: 3px;
     background-color: #010101;
     border-radius: 2px;
-     transition: transform 0.3s ease, width 0.3s ease;
+    transition: transform 0.3s ease, width 0.3s ease;
 
 }
 
@@ -146,12 +151,12 @@
 .chip {
   background: transparent;
   border: 1px solid rgba(25, 118, 210, 0.25);
-  color: black !important;         /* allt svart som standard */
+  color: white !important;         /* allt svart som standard */
   padding: 6px 10px;
   border-radius: 999px;
   font-size: 0.9rem;
   cursor: pointer;
-  transition: transform .15s ease, background .2s ease, color .2s ease, border-color .2s ease;
+  transition: transform .15s ease, .2s ease, color .2s ease, border-color .2s ease;
 }
 
 .chip:hover { transform: translateY(-1px); }
