--- a/frontend/src/components/MatchDetails/MatchDetail.css
+++ b/frontend/src/components/MatchDetails/MatchDetail.css
@@ -216,8 +216,15 @@
 .event-player { color: black; }         /* namn alltid svart */
 .event-minute { opacity: 0.7; }
 
-.tl-row.assist .tl-left {
-  opacity: 0.7;          /* 👈 lägre än mål */
+
+.tl-row.away-event .tl-right {
+  text-align: left;
+    opacity: 0.7;          /* 👈 lägre än mål */
+  font-size: 0.93rem;
+}
+.tl-row.away-event .tl-left {
+  text-align: right;
+    opacity: 0.7;          /* 👈 lägre än mål */
   font-size: 0.93rem;
 }
 
