--- a/frontend/src/pages/admin/AdminPage.css
+++ b/frontend/src/pages/admin/AdminPage.css
@@ -3,16 +3,18 @@
 /* glowing boxShadow */
 .Card {
   transition: box-shadow 1s ease-in-out, transform 0.8s ease, background-color 0.8s ease;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
       background-color: rgba(0, 0, 0, 0.6);
                 background-blend-mode: darken;
+    border: 2px solid black;
 
 }
+
 .Card:hover {
-  box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 30px rgba(0, 0, 0, 1);
   transform: scale(1.01);
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.1);
 }
