--- a/frontend/src/pages/admin/AdminPage.css
+++ b/frontend/src/pages/admin/AdminPage.css
@@ -10,7 +10,7 @@
       background-color: rgba(0, 0, 0, 0.6);
                 background-blend-mode: darken;
     border: 2px solid black;
-
+    border-radius: 30px;
 }
 
 .Card:hover {
